--- a/assets/css/main-admin.css
+++ b/assets/css/main-admin.css
@@ -193,3 +193,21 @@ select.change_camp_stt{
 .content-cmt p{
 	font-size: 18px;
 }
+
+table .hidden-pc , table .hidden-note{
+	width: 0;
+    position: absolute;
+    opacity: 0;
+	transition: 0.2s;
+	z-index: -1;
+}
+table .hidden-pc.block , table .hidden-note.block{
+	position: unset;
+	opacity: 1;
+	width: 100%;
+	transition: 0.2s;
+	z-index: 1;
+}
+table th.show-pc , table th.show-note{
+	cursor: pointer;
+}
